--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body{
 ul>li .active{
   color: #51a2ff;
 }
+.cards-items{
+  background-color: rebeccapurple;
+  flex-direction: row;
+}
 .swiper {
   width: 100%;
   height: 100%;
